--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "scripts": {
     "test": "nyc --reporter=text mocha --inspect --recursive",
-    "coverage": "nyc report --reporter=text-lcov"
+    "coverage": "nyc report --reporter=text-lcov",
+    "preversion": "tsc"
   },
   "main": "js/index.js",
   "license": "MIT",
-  "name": "@pubcore/express-basic-auth",
-  "version": "1.1.9",
+  "name": "@tejaskumar/express-basic-auth",
+  "version": "1.0.0",
   "description": "express middleware to perform http basic authentication",
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/pubcore/express-basic-auth.git"
+    "url": "git+ssh://git@github.com/tejasq/express-basic-auth.git"
   },
   "directories": {
     "test": "test"
@@ -28,8 +29,15 @@
     "basic-auth": "^2.0.1",
     "cookie": "^0.3.1"
   },
+  "files": [
+    "js"
+  ],
   "devDependencies": {
     "@pubcore/knex-create-test-db": "^1.1.12",
+    "@types/chai": "^4.2.18",
+    "@types/cookie": "^0.4.0",
+    "@types/express": "^4.17.12",
+    "@types/jest": "^26.0.23",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "eslint": "^6.8.0",
@@ -40,6 +48,6 @@
     "moment": "^2.29.1",
     "nyc": "^15.1.0",
     "source-map-support": "^0.5.19",
-    "sqlite3": "^4.2.0"
+    "typescript": "^4.4.0-dev.20210610"
   }
 }
